Fix PORTRAIT slider overlapping header on IE

--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -4,7 +4,7 @@ header
   background: $black
   position: fixed
   top: 0
-  z-index: 100
+  z-index: 99999999
 
 header i
   cursor: pointer
