--- a/sass/_portraitSlider.sass
+++ b/sass/_portraitSlider.sass
@@ -32,6 +32,7 @@
 .portrait__slider .slider__navigation
   float: none
   position: absolute
+  z-index: 99999998
 
 .portrait__slider .btn
   position: absolute
